# vater

./: .gitignore  .gitlab-ci.yml  README.md  config.h.meson  meson.build  meson_options.txt
.gitlab-ci/: Dockerfile  checkout-gnome-shell.sh
.gitlab/issue_templates/: Bug.md  Feature.md
clutter/: meson.build
clutter/clutter/: clutter-actor.c  clutter-backend.c  clutter-build-config.h.meson  clutter-main.c  clutter-mutter.h  clutter-stage-view.c  clutter-stage.c  clutter-timeline.c  meson.build  vater-clutter.pc.in
clutter/clutter/cally/: cally-util.c
cogl/: .gitignore
cogl/cogl/: cogl-buffer.h  cogl-context.c  cogl-framebuffer.h  cogl-gl-header.h.in  cogl-meta-texture.h  cogl-mutter.h  cogl-primitive-texture.h  cogl-renderer.c  cogl-texture.h  cogl.h  meson.build  vater-cogl.pc.in
cogl/cogl-pango/: meson.build  vater-cogl-pango.pc.in
cogl/cogl/deprecated/: cogl-type-casts.h
cogl/test-fixtures/: meson.build
cogl/tests/: meson.build
cogl/tests/conform/: meson.build  vater-cogl.test.in
cogl/tests/unit/: meson.build
data/: 50-mutter-wayland.xml  50-vater-navigation.xml  50-vater-system.xml  50-vater-windows.xml  61-mutter.rules  io.github.scarecrow_de.mutter.gschema.xml.in  io.github.scarecrow_de.vater.gschema.xml.in  io.github.scarecrow_de.vater.wayland.gschema.xml.in  meson.build  vater-schemas.convert  vater.desktop.in
doc/: compositor-control.txt
doc/man/: meson.build  vater.1
po/: POTFILES.in  ar.po  as.po  ast.po  be.po  bg.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  kn.po  ko.po  lt.po  (+32 more)
src/: io.github.scarecrow_de.Vater.DisplayConfig.xml  io.github.scarecrow_de.Vater.IdleMonitor.xml  io.github.scarecrow_de.Vater.RemoteDesktop.xml  io.github.scarecrow_de.Vater.ScreenCast.xml  libmutter.pc.in  meson.build  meta-private-enum-types.h.in
src/backends/: meta-backend.c  meta-cursor-renderer.c  meta-cursor-tracker.c  meta-display-config-shared.h  meta-idle-monitor-dbus.c  meta-idle-monitor-dbus.h  meta-idle-monitor-private.h  meta-idle-monitor.c  meta-input-device-private.h  meta-input-settings-private.h  meta-input-settings.c  meta-monitor-config-manager.c  meta-monitor-manager-dummy.c  meta-monitor-manager-private.h  meta-monitor-manager.c  meta-profiler.c  meta-remote-desktop-session.c  meta-remote-desktop.c  meta-renderer-view.c  meta-renderer-view.h  meta-renderer.h  meta-screen-cast-area-stream-src.c  meta-screen-cast-monitor-stream-src.c  meta-screen-cast-session.c  meta-screen-cast-stream-src.c  meta-screen-cast-stream.c  meta-screen-cast.c  meta-settings.c  meta-stage.c
src/backends/native/: meta-backend-native.c  (+12 more)
src/compositor/: README  cogl-utils.c  compositor-private.h  compositor.c  meta-background-actor.c  meta-background-content.c  meta-later.c  meta-plugin-manager.c  meta-window-actor-private.h  meta-window-actor-x11.c  meta-window-actor.c
src/core/: bell.c  constraints.c  constraints.h  delete.c  display-private.h  display.c  edge-resistance.c  events.c  frame.c  frame.h  keybindings.c  main.c  meta-accel-parse.c  meta-anonymous-file.c  meta-close-dialog-default.c  meta-sound-player.c  mutter.c  place.c  place.h  prefs.c  restart-helper.c  restart.c  startup-notification.c  util-private.h  util.c  window-private.h  window.c
src/meta/: common.h  compositor-mutter.h  group.h  main.h  meson.build  meta-background-actor.h  meta-background-content.h  meta-background.h  meta-enum-types.h.in  meta-later.h  meta-plugin.h  meta-version.h.in  meta-x11-errors.h  prefs.h  util.h  window.h
src/tests/: README  boxes-tests.c  clutter-test-utils.c  headless-start-test.c  meson.build  test-runner.c  test-utils.c  vater-all.test.in
src/ui/: frames.c  ui.c  ui.h
src/wayland/: meta-wayland-versions.h  meta-wayland-xdg-shell.c  meta-wayland.c  meta-xwayland-dnd.c  meta-xwayland.c
src/x11/: atomnames.h  events.c  group-private.h  group.c  iconcache.c  iconcache.h  meta-x11-display-private.h  meta-x11-display.c  meta-x11-errors.c  meta-x11-window-control.c  meta-x11-window-control.h  mutter-Xatomtype.h  session.c  window-props.c  window-x11.c  xprops.c  xprops.h
(+21 files in other folders)
